# PyCCM

./: .github_issue_infant_adjustment.md  README.md  config.yaml  presentation_code_review.aux  presentation_code_review.fdb_latexmk  presentation_code_review.fls  presentation_code_review.nav  presentation_code_review.tex  pyproject.toml
course/hackathon/: final_day_hackathon.md
course/labs/files/: data.csv  example_text.txt
course/labs/questions/: Computer_Lab_1.ipynb  Computer_Lab_2.ipynb  Computer_Lab_3.ipynb  Computer_Lab_4.ipynb
course/labs/solutions/: Computer_Lab_1_solutions_comprehensive.py  Computer_Lab_1_solutions_in_class.py  Computer_Lab_2_in_class.py  Computer_Lab_3_in_class.py  Computer_Lab_4_in_class.py
data/: Projections_DANE_NAL_2018_2070.csv  conteos.rds  midpoints_example.csv  mortality_improvements_example.csv  target_tfrs_example.csv
docs/: DOCUMENTATION_INDEX.md  README.md
docs/modules/abridger/: DEMOGRAPHIC_ASSESSMENT.md  DEMOGRAPHIC_IMPROVEMENTS_QUICKSTART.md  HARMONIZATION_EXPLANATION.md  HARMONIZATION_VISUAL_GUIDE.md  TEST_SUMMARY_abridger.md  TEST_SUMMARY_harmonization.md
docs/tests/: COMPREHENSIVE_TESTING_REPORT.md  README.md  TESTING_SUMMARY_QUICK.md
docs/validations_and_fixes/: ABRIDGER_FIXES_SUMMARY.md  API_SIMPLIFICATION_SUMMARY.md  FERTILITY_VALIDATION_SUMMARY.md  KNOWN_ISSUES.md  PYTHON_311_VALIDATION_REPORT.md
src/: abridger.py  data_loaders.py  fertility.py  figures_static.ipynb  figures_static.py  figures_static_helpers.py  helpers.py  main_compute.py  main_staticvis_v2.ipynb  main_staticviz.ipynb  migration.py  mortality.py  projections.py
tests/: README.md  test_abridger.py  test_data_loaders.py  test_fertility.py  test_harmonization.py  test_helpers.py  test_main_compute.py  test_migration.py  test_mortality.py  test_projections.py
(+33 files in other folders)
