[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyccm"
version = "0.1.0"
description = "Population projection pipeline with joint parameter sweeps"
authors = [
  { name = "PyCCM Contributors" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "tqdm>=4.65",
  "pyarrow>=14.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
