[project]
name = "PyCCM"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "PyCCM Contributors" },
    { name = "crahal", email = "charlierahal@gmail.com" },
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "tqdm>=4.65",
    "pyarrow>=14.0",
    "PyCCM @ file:///${PROJECT_ROOT}/",
    "geopandas>=1.1.1",
    "mapclassify>=2.10.0",
    "shapely>=2.1.2",
]

[project.license]
text = "MIT"
[tool.ruff]
line-length = 100

[tool.pdm]
distribution = false]
